// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popup render 1`] = `
<div
  className="p-3 flex flex-col justify-center items-center"
  style={
    {
      "minWidth": "230px",
    }
  }
>
  <h1
    className="text-xl font-bold leading-7 text-gray-900 self-center sm:truncate sm:text-3xl sm:tracking-tight"
  >
    Options - 設定
  </h1>
  <div
    className="my-1"
  >
    <fieldset
      className="my-1"
    >
      <h2
        className="text-base font-semibold leading-7 text-gray-900"
      >
        TwitterWeb公式
      </h2>
      <div
        className="checkboxListItem relative flex gap-x-2"
      >
        <div
          className="flex h-6 items-center"
        >
          <input
            checked={true}
            className="SHOW_ON_TIMELINE h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600"
            id="SHOW_ON_TIMELINE"
            name="SHOW_ON_TIMELINE"
            onClick={[Function]}
            type="checkbox"
          />
        </div>
        <div
          className="text-sm leading-6"
        >
          <label
            className="font-medium text-gray-900"
            htmlFor="SHOW_ON_TIMELINE"
          >
            タイムライン
          </label>
        </div>
      </div>
      <div
        className="checkboxListItem relative flex gap-x-2"
      >
        <div
          className="flex h-6 items-center"
        >
          <input
            checked={true}
            className="SHOW_ON_TWEET_DETAIL h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600"
            id="SHOW_ON_TWEET_DETAIL"
            name="SHOW_ON_TWEET_DETAIL"
            onClick={[Function]}
            type="checkbox"
          />
        </div>
        <div
          className="text-sm leading-6"
        >
          <label
            className="font-medium text-gray-900"
            htmlFor="SHOW_ON_TWEET_DETAIL"
          >
            (旧表示で)ツイート詳細
          </label>
        </div>
      </div>
    </fieldset>
    <fieldset
      className="my-1"
    >
      <h2
        className="text-base font-semibold leading-7 text-gray-900"
      >
        TweetDeck
      </h2>
      <div
        className="checkboxListItem relative flex gap-x-2"
      >
        <div
          className="flex h-6 items-center"
        >
          <input
            checked={true}
            className="SHOW_ON_TWEETDECK_TIMELINE h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600"
            id="SHOW_ON_TWEETDECK_TIMELINE"
            name="SHOW_ON_TWEETDECK_TIMELINE"
            onClick={[Function]}
            type="checkbox"
          />
        </div>
        <div
          className="text-sm leading-6"
        >
          <label
            className="font-medium text-gray-900"
            htmlFor="SHOW_ON_TWEETDECK_TIMELINE"
          >
            タイムライン
          </label>
        </div>
      </div>
      <div
        className="checkboxListItem relative flex gap-x-2"
      >
        <div
          className="flex h-6 items-center"
        >
          <input
            checked={true}
            className="SHOW_ON_TWEETDECK_TWEET_DETAIL h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600"
            id="SHOW_ON_TWEETDECK_TWEET_DETAIL"
            name="SHOW_ON_TWEETDECK_TWEET_DETAIL"
            onClick={[Function]}
            type="checkbox"
          />
        </div>
        <div
          className="text-sm leading-6"
        >
          <label
            className="font-medium text-gray-900"
            htmlFor="SHOW_ON_TWEETDECK_TWEET_DETAIL"
          >
            (旧表示で)ツイート詳細
          </label>
        </div>
      </div>
    </fieldset>
    <div
      className="my-1"
    >
      <label
        className="text-base font-semibold leading-7 text-gray-900"
        htmlFor="button-text"
      >
        ボタンのテキスト
      </label>
      <div
        className="mt-2"
      >
        <input
          className="ORIGINAL_BUTTON_TEXT_OPTION_KEY block w-1/2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 px-2 text-base"
          id="original-button-text"
          name="original-button-text"
          onChange={[Function]}
          type="text"
          value="Original"
        />
      </div>
    </div>
  </div>
  <button
    className="saveSettingButton rounded-md bg-indigo-600 w-4/5 mt-1 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
    onClick={[Function]}
    type="submit"
  >
    設定を保存
  </button>
  <footer
    className="text-center mt-1"
  >
    twitter画像原寸ボタン - hogashi
  </footer>
</div>
`;

exports[`Popup renders correctly 1`] = `
<div>
  <div
    class="p-3 flex flex-col justify-center items-center"
    style="min-width: 230px;"
  >
    <h1
      class="text-xl font-bold leading-7 text-gray-900 self-center sm:truncate sm:text-3xl sm:tracking-tight"
    >
      Options - 設定
    </h1>
    <div
      class="my-1"
    >
      <fieldset
        class="my-1"
      >
        <h2
          class="text-base font-semibold leading-7 text-gray-900"
        >
          TwitterWeb公式
        </h2>
        <div
          class="checkboxListItem relative flex gap-x-2"
        >
          <div
            class="flex h-6 items-center"
          >
            <input
              checked=""
              class="SHOW_ON_TIMELINE h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600"
              id="SHOW_ON_TIMELINE"
              name="SHOW_ON_TIMELINE"
              type="checkbox"
            />
          </div>
          <div
            class="text-sm leading-6"
          >
            <label
              class="font-medium text-gray-900"
              for="SHOW_ON_TIMELINE"
            >
              タイムライン
            </label>
          </div>
        </div>
        <div
          class="checkboxListItem relative flex gap-x-2"
        >
          <div
            class="flex h-6 items-center"
          >
            <input
              checked=""
              class="SHOW_ON_TWEET_DETAIL h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600"
              id="SHOW_ON_TWEET_DETAIL"
              name="SHOW_ON_TWEET_DETAIL"
              type="checkbox"
            />
          </div>
          <div
            class="text-sm leading-6"
          >
            <label
              class="font-medium text-gray-900"
              for="SHOW_ON_TWEET_DETAIL"
            >
              (旧表示で)ツイート詳細
            </label>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="my-1"
      >
        <h2
          class="text-base font-semibold leading-7 text-gray-900"
        >
          TweetDeck
        </h2>
        <div
          class="checkboxListItem relative flex gap-x-2"
        >
          <div
            class="flex h-6 items-center"
          >
            <input
              checked=""
              class="SHOW_ON_TWEETDECK_TIMELINE h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600"
              id="SHOW_ON_TWEETDECK_TIMELINE"
              name="SHOW_ON_TWEETDECK_TIMELINE"
              type="checkbox"
            />
          </div>
          <div
            class="text-sm leading-6"
          >
            <label
              class="font-medium text-gray-900"
              for="SHOW_ON_TWEETDECK_TIMELINE"
            >
              タイムライン
            </label>
          </div>
        </div>
        <div
          class="checkboxListItem relative flex gap-x-2"
        >
          <div
            class="flex h-6 items-center"
          >
            <input
              checked=""
              class="SHOW_ON_TWEETDECK_TWEET_DETAIL h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600"
              id="SHOW_ON_TWEETDECK_TWEET_DETAIL"
              name="SHOW_ON_TWEETDECK_TWEET_DETAIL"
              type="checkbox"
            />
          </div>
          <div
            class="text-sm leading-6"
          >
            <label
              class="font-medium text-gray-900"
              for="SHOW_ON_TWEETDECK_TWEET_DETAIL"
            >
              (旧表示で)ツイート詳細
            </label>
          </div>
        </div>
      </fieldset>
      <div
        class="my-1"
      >
        <label
          class="text-base font-semibold leading-7 text-gray-900"
          for="button-text"
        >
          ボタンのテキスト
        </label>
        <div
          class="mt-2"
        >
          <input
            class="ORIGINAL_BUTTON_TEXT_OPTION_KEY block w-1/2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 px-2 text-base"
            id="original-button-text"
            name="original-button-text"
            type="text"
            value="Original"
          />
        </div>
      </div>
    </div>
    <button
      class="saveSettingButton rounded-md bg-indigo-600 w-4/5 mt-1 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
      type="submit"
    >
      設定を保存
    </button>
    <footer
      class="text-center mt-1"
    >
      twitter画像原寸ボタン - hogashi
    </footer>
  </div>
</div>
`;
